bench/results/v0.22.0/summary.md
# Boring CMS benchmark v0.22.0

Run: 2026-09-22T06:48:17.554Z on Linux 7.1.10-200.fc44.x86_64, AMD Ryzen 5 5600X 6-Core Processor (12 cores host).
Constraints and methodology: see bench/README.md. Read it before comparing numbers; the CPU pinning, memory caps, rate limit override, and client placement all shape these results.

## Throughput (ops/s) by phase

| Phase | bun-1cpu | bun-2cpu | bun-4cpu | deno-1cpu | deno-2cpu | deno-4cpu | node-1cpu | node-2cpu | node-4cpu |
| --- | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: |
| schema_apply | 753.4 | 808.8 | 935.9 | 681.5 | 752.7 | 860.4 | 701.1 | 824.4 | 848.6 |
| schema_read | 1966.6 | 2480.6 | 2556.2 | 2121.9 | 2133.8 | 2641.6 | 1898.1 | 2279.4 | 2673 |
| create_short | 1493.3 | 1624.5 | 1505.2 | 1229.7 | 1442 | 1432.9 | 1343.2 | 1428.2 | 1374 |
| create_long | 930.8 | 943.1 | 904 | 890.3 | 934.6 | 978.4 | 811.6 | 940.9 | 956.7 |
| create_short_restcall | 1964.8 | 2012.7 | 2010.7 | 1985.7 | 1933.8 | 1916.1 | 1779.6 | 1916.7 | 1942.2 |
| batch_create_short_x200 | 128.5 | 151.8 | 131.8 | 107.5 | 103.1 | 111.3 | 119.1 | 117.9 | 114.4 |
| read_list_short | 3007 | 3096.8 | 3556.3 | 3226.9 | 3466 | 3530.3 | 3260.4 | 3070 | 3094.8 |
| read_list_long | 2506.1 | 2789.4 | 2887.2 | 2832.4 | 2712.4 | 2657.3 | 2213.2 | 2412.6 | 2448 |
| read_single_short | 4373.7 | 4564.5 | 4693 | 4558.2 | 4462.3 | 4232.8 | 3554.4 | 4360.8 | 4261.9 |
| read_single_long | 2261.8 | 2844.9 | 2779.7 | 2773.1 | 2867.6 | 2795 | 2504.8 | 2743.7 | 2598.1 |
| read_304_etag | 3886.5 | 4418.9 | 4754.7 | 3794.5 | 4462.9 | 4641.5 | 4727.1 | 4154.2 | 4377.2 |
| update_then_read | 1063.2 | 1175 | 1229.9 | 1115.3 | 1128.2 | 1104.7 | 1049.3 | 1086.6 | 1173.7 |
| rewrite_dry_1pair | 231.5 | 233.8 | 225.9 | 202.2 | 171.5 | 183.2 | 201.3 | 199 | 182.2 |
| rewrite_dry_200pairs | 123.7 | 137 | 143 | 144.5 | 140 | 144 | 130.6 | 144 | 132.3 |
| rewrite_live_200pairs | 76.9 | 63.9 | 65.9 | 91.2 | 78.7 | 102.1 | 94.2 | 93.2 | 79.8 |
| media_upload_64kb | 1182.1 | 1165.1 | 1156.4 | 741.2 | 730.3 | 816 | 794.3 | 864.7 | 1051.3 |
| media_serve_64kb | 1747.2 | 1803.3 | 1968.4 | 1686.1 | 1645.7 | 1903.3 | 1471.9 | 1628 | 1824.7 |
| media_reupload | 1159.1 | 1258.5 | 1299.4 | 1114.3 | 813.5 | 1106.5 | 757.8 | 723.2 | 1337.3 |
| media_delete | 2407.8 | 2576.6 | 2880.9 | 2298 | 1942.4 | 2290.9 | 2248.5 | 2466 | 2310.2 |
| link_access | 3989.8 | 4557.2 | 4606.3 | 4187.3 | 3935.4 | 4276.9 | 3859.4 | 3766.9 | 4559.6 |
| read_concurrent_20 | 7385.8 | 7670.3 | 7677.6 | 7172.8 | 6623.4 | 7598.3 | 6277.1 | 6833.3 | 6651.6 |
| write_concurrent_10 | 3194.8 | 3637.2 | 3658.8 | 3436.2 | 3739.7 | 3198.5 | 3128.9 | 3244.5 | 3235.4 |
| schedule_future | 1061.2 | 1056.7 | 1142.8 | 1014.9 | 1088.2 | 1105.5 | 996.4 | 1020.3 | 986.7 |
| read_list_short_with_scheduled | 2717.1 | 2919.1 | 2709.8 | 2431.6 | 2418 | 2265.8 | 2682.2 | 2601.5 | 2675.2 |
| read_single_scheduled_404 | 5306.5 | 4770.5 | 5099.7 | 4303 | 4284.6 | 4357.4 | 5278.8 | 4387 | 4257.4 |
| list_scheduled | 1549.8 | 1602.8 | 1593.1 | 1242 | 1459.1 | 1373 | 1458.7 | 1400.5 | 1368.9 |
| get_entry_draft_scheduled | 2349.3 | 2624.4 | 2828 | 2414.5 | 2549.2 | 2552.4 | 2488.4 | 2513.8 | 2247.7 |
| reschedule_entry | 2201.8 | 2502.1 | 2397.9 | 2125.7 | 2262.9 | 2146.8 | 2344.8 | 2251.4 | 2129.6 |
| scheduled_goes_live | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
| misc_seed | 1423.8 | 1547.6 | 1538.5 | 1378.2 | 1343.3 | 1385 | 1427.3 | 1272.6 | 1339.2 |
| misc_read_only | 6654.1 | 6516.6 | 6228.6 | 5883.5 | 6157 | 5936.9 | 5408.6 | 5954.8 | 6029.1 |
| misc_read_write | 5925.6 | 6723.1 | 6347.6 | 4940.1 | 5641.7 | 5691.1 | 5063.9 | 5142.6 | 4857.6 |
| misc_write_votes | 9636.5 | 9314.9 | 9777.7 | 9026 | 9237.1 | 9188.3 | 8494.9 | 8660.2 | 8526.4 |
| misc_write_edits | 2407.3 | 2314.7 | 2590.4 | 1912.5 | 2575.5 | 2688.5 | 1875.5 | 2352.1 | 2469 |
| misc_hot_votes | 10400.2 | 10773 | 10189.7 | 9382.3 | 9359.5 | 9746.3 | 8449.2 | 8732.9 | 9653.8 |
| misc_hot_mixed | 11110 | 12489.6 | 12722.2 | 9166.8 | 9818.3 | 10097.5 | 10953 | 10523.1 | 10691.7 |
| misc_hot_repeat_voters | 10378 | 11469.8 | 11214.4 | 9044.9 | 10463.1 | 9714.4 | 10514.4 | 9379 | 10783.5 |
| misc_private_bump | 10325 | 13357.4 | 13006.8 | 10097.5 | 9503.8 | 9172.7 | 7756.3 | 8364.1 | 8005.6 |
| check_schema_health | 179.8 | 218.1 | 172.2 | 239.1 | 259.9 | 260.4 | 175 | 186.1 | 192 |
| guard_update_field_large | 670.1 | 792.3 | 773.3 | 471.2 | 632.2 | 566.4 | 632.4 | 568.9 | 617.3 |
| guard_update_field_small | 528 | 525.3 | 530 | 657.5 | 592.7 | 643 | 676.8 | 543.7 | 669.5 |
| guard_add_field_forced_large | 604.3 | 609.8 | 707.3 | 457.3 | 478.6 | 508.4 | 365.1 | 402.2 | 479.9 |
| guard_add_field_forced_small | 474.9 | 448.1 | 530.8 | 606.2 | 588.8 | 541.9 | 632.6 | 527.3 | 625.3 |
| field_archive_restore_cycle_large | 410.4 | 345.2 | 372 | 379.2 | 377.2 | 346 | 374.1 | 322.6 | 366 |
| field_archive_restore_cycle_small | 336.2 | 338.6 | 348.6 | 362.8 | 319.3 | 289.2 | 313.7 | 341.7 | 399.9 |
| openapi_read | 7103.8 | 6704 | 6971.8 | 7204.4 | 7105.9 | 6554.6 | 6254.5 | 6263.1 | 6707.2 |
| auth_gate_probes | 3742.1 | 3837.6 | 3858.3 | 3829.6 | 3853.2 | 3668 | 3758.7 | 3647.9 | 3892.2 |
| rate_limit_on | 3362.2 | 3988 | 2140.7 | 3459.8 | 3488 | 3596.8 | 3263 | 3525.9 | 2807.9 |
| delete_entries | 2496.5 | 2653.5 | 2624.7 | 2482.4 | 2656.1 | 2569.3 | 2509.8 | 2549.3 | 2403.4 |

## Latency p50 / p95 (ms) by phase

| Phase | bun-1cpu | bun-2cpu | bun-4cpu | deno-1cpu | deno-2cpu | deno-4cpu | node-1cpu | node-2cpu | node-4cpu |
| --- | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: |
| schema_apply | 1.05 / 2.49 | 1.05 / 2.82 | 0.91 / 2.31 | 1.44 / 2.71 | 1.22 / 2.66 | 0.89 / 2.29 | 1.26 / 2.49 | 0.93 / 2.49 | 0.92 / 2.26 |
| schema_read | 0.4 / 0.94 | 0.37 / 0.76 | 0.36 / 0.73 | 0.42 / 0.9 | 0.41 / 0.89 | 0.34 / 0.74 | 0.4 / 0.91 | 0.41 / 0.83 | 0.34 / 0.7 |
| create_short | 0.59 / 1.18 | 0.57 / 0.82 | 0.62 / 0.85 | 0.67 / 1.03 | 0.66 / 0.94 | 0.67 / 0.9 | 0.66 / 1.09 | 0.67 / 0.94 | 0.68 / 0.96 |
| create_long | 0.97 / 1.81 | 0.95 / 1.64 | 1.02 / 1.76 | 0.98 / 1.67 | 1 / 1.49 | 0.94 / 1.44 | 1.08 / 2.17 | 1 / 1.5 | 0.98 / 1.45 |
| create_short_restcall | 0.45 / 0.75 | 0.46 / 0.59 | 0.47 / 0.59 | 0.45 / 0.71 | 0.47 / 0.65 | 0.5 / 0.64 | 0.48 / 0.83 | 0.49 / 0.65 | 0.48 / 0.63 |
| batch_create_short_x200 | 6.83 / 9.72 | 6.45 / 7.23 | 7.39 / 8.65 | 9.68 / 9.74 | 9.76 / 10.6 | 8.55 / 9.92 | 8.72 / 8.9 | 8.78 / 9.16 | 8.61 / 9.39 |
| read_list_short | 0.25 / 0.69 | 0.28 / 0.57 | 0.26 / 0.33 | 0.27 / 0.56 | 0.26 / 0.39 | 0.25 / 0.36 | 0.29 / 0.43 | 0.3 / 0.42 | 0.3 / 0.44 |
| read_list_long | 0.3 / 0.63 | 0.27 / 0.44 | 0.25 / 0.49 | 0.26 / 0.57 | 0.29 / 0.45 | 0.29 / 0.53 | 0.34 / 0.68 | 0.3 / 0.5 | 0.31 / 0.57 |
| read_single_short | 0.19 / 0.29 | 0.2 / 0.26 | 0.21 / 0.24 | 0.21 / 0.26 | 0.22 / 0.26 | 0.22 / 0.29 | 0.24 / 0.4 | 0.22 / 0.28 | 0.22 / 0.28 |
| read_single_long | 0.31 / 0.88 | 0.34 / 0.44 | 0.34 / 0.42 | 0.33 / 0.45 | 0.33 / 0.43 | 0.35 / 0.45 | 0.37 / 0.46 | 0.34 / 0.45 | 0.38 / 0.44 |
| read_304_etag | 0.18 / 0.44 | 0.19 / 0.28 | 0.2 / 0.27 | 0.19 / 0.24 | 0.2 / 0.27 | 0.19 / 0.26 | 0.19 / 0.28 | 0.21 / 0.31 | 0.21 / 0.25 |
| update_then_read | 0.78 / 1.66 | 0.78 / 1.04 | 0.76 / 0.89 | 0.8 / 1.22 | 0.83 / 1.09 | 0.82 / 1.07 | 0.86 / 1.28 | 0.85 / 1.12 | 0.8 / 0.98 |
| rewrite_dry_1pair | 4.32 / 4.32 | 4.28 / 4.28 | 4.43 / 4.43 | 4.94 / 4.94 | 5.83 / 5.83 | 5.46 / 5.46 | 4.97 / 4.97 | 5.02 / 5.02 | 5.49 / 5.49 |
| rewrite_dry_200pairs | 8.08 / 8.08 | 7.3 / 7.3 | 6.99 / 6.99 | 6.92 / 6.92 | 7.14 / 7.14 | 6.94 / 6.94 | 7.66 / 7.66 | 6.94 / 6.94 | 7.56 / 7.56 |
| rewrite_live_200pairs | 13 / 13 | 15.66 / 15.66 | 15.16 / 15.16 | 10.96 / 10.96 | 12.7 / 12.7 | 9.79 / 9.79 | 10.61 / 10.61 | 10.73 / 10.73 | 12.52 / 12.52 |
| media_upload_64kb | 0.76 / 1.23 | 0.79 / 1.18 | 0.81 / 0.99 | 0.96 / 4.04 | 1.02 / 3.25 | 0.98 / 1.37 | 0.84 / 2.82 | 0.87 / 2.61 | 0.83 / 0.94 |
| media_serve_64kb | 0.47 / 1.14 | 0.45 / 1.01 | 0.45 / 0.74 | 0.48 / 0.81 | 0.53 / 0.9 | 0.5 / 0.7 | 0.47 / 0.85 | 0.51 / 0.85 | 0.5 / 0.76 |
| media_reupload | 0.68 / 1.38 | 0.71 / 1.33 | 0.71 / 1.02 | 0.85 / 1.02 | 1.18 / 1.65 | 0.87 / 0.98 | 0.72 / 1.23 | 0.85 / 2.23 | 0.71 / 0.86 |
| media_delete | 0.32 / 0.85 | 0.35 / 0.75 | 0.33 / 0.4 | 0.4 / 0.58 | 0.45 / 0.87 | 0.39 / 0.49 | 0.36 / 0.75 | 0.39 / 0.49 | 0.36 / 0.46 |
| link_access | 0.21 / 0.42 | 0.21 / 0.26 | 0.21 / 0.28 | 0.23 / 0.33 | 0.25 / 0.3 | 0.23 / 0.26 | 0.23 / 0.3 | 0.24 / 0.33 | 0.21 / 0.25 |
| read_concurrent_20 | 2.28 / 4.9 | 2.32 / 4.6 | 2.3 / 4.51 | 2.46 / 3.95 | 2.48 / 5.93 | 2.36 / 4.08 | 2.41 / 5.53 | 2.37 / 5.99 | 2.34 / 4.96 |
| write_concurrent_10 | 2.49 / 5.73 | 2.22 / 5.75 | 2.24 / 5.2 | 2.28 / 5.42 | 2.16 / 5.27 | 2.64 / 6.29 | 2.5 / 5.47 | 2.27 / 6.55 | 2.38 / 5.5 |
| schedule_future | 0.76 / 1.44 | 0.82 / 0.97 | 0.77 / 0.92 | 0.88 / 1.08 | 0.8 / 1.04 | 0.88 / 1.08 | 0.85 / 1.31 | 0.87 / 1.23 | 0.9 / 1.16 |
| read_list_short_with_scheduled | 0.33 / 0.45 | 0.33 / 0.42 | 0.35 / 0.45 | 0.38 / 0.47 | 0.38 / 0.48 | 0.37 / 0.45 | 0.35 / 0.41 | 0.35 / 0.44 | 0.35 / 0.47 |
| read_single_scheduled_404 | 0.18 / 0.26 | 0.2 / 0.23 | 0.19 / 0.27 | 0.2 / 0.29 | 0.22 / 0.31 | 0.22 / 0.3 | 0.18 / 0.21 | 0.22 / 0.28 | 0.22 / 0.29 |
| list_scheduled | 0.62 / 0.82 | 0.61 / 0.7 | 0.6 / 0.75 | 0.69 / 0.86 | 0.68 / 0.76 | 0.71 / 0.84 | 0.68 / 0.78 | 0.71 / 0.82 | 0.7 / 0.9 |
| get_entry_draft_scheduled | 0.4 / 0.51 | 0.37 / 0.49 | 0.35 / 0.38 | 0.41 / 0.5 | 0.39 / 0.42 | 0.39 / 0.45 | 0.38 / 0.44 | 0.39 / 0.43 | 0.43 / 0.54 |
| reschedule_entry | 0.4 / 0.79 | 0.39 / 0.47 | 0.4 / 0.49 | 0.44 / 0.6 | 0.42 / 0.5 | 0.46 / 0.53 | 0.41 / 0.47 | 0.44 / 0.47 | 0.47 / 0.5 |
| scheduled_goes_live | 3106.17 / 3106.17 | 3111.16 / 3111.16 | 3110.29 / 3110.29 | 3106.35 / 3106.35 | 3104.84 / 3104.84 | 3106.19 / 3106.19 | 3104.1 / 3104.1 | 3105.42 / 3105.42 | 3104.96 / 3104.96 |
| misc_seed | 0.61 / 1 | 0.61 / 0.74 | 0.62 / 0.75 | 0.65 / 1.07 | 0.68 / 0.93 | 0.67 / 0.86 | 0.67 / 0.87 | 0.66 / 1.21 | 0.68 / 0.98 |
| misc_read_only | 2.19 / 3.81 | 2.22 / 3.85 | 2.35 / 4.23 | 2.45 / 4.03 | 2.33 / 4.32 | 2.39 / 4.65 | 2.46 / 5.84 | 2.46 / 4.51 | 2.45 / 4.59 |
| misc_read_write | 2.39 / 4.98 | 2.31 / 3.98 | 2.37 / 4.14 | 2.78 / 5.38 | 2.67 / 4.48 | 2.7 / 3.99 | 2.59 / 5.6 | 2.62 / 5.51 | 2.77 / 5.92 |
| misc_write_votes | 2.87 / 4.9 | 3.02 / 4.42 | 2.95 / 3.85 | 3.1 / 5.21 | 3.09 / 4.68 | 3.05 / 5.43 | 3.06 / 7.32 | 3.27 / 6.11 | 3.04 / 6.62 |
| misc_write_edits | 1.15 / 2.43 | 1.46 / 3.1 | 1.06 / 2.33 | 1.52 / 4.09 | 1.43 / 2.2 | 1.43 / 1.84 | 1.42 / 5.15 | 1.17 / 2.64 | 1.22 / 2.57 |
| misc_hot_votes | 5.2 / 13.93 | 5.1 / 12.75 | 5.56 / 13.94 | 5.8 / 13.23 | 5.79 / 14.04 | 5.7 / 12.95 | 6.07 / 15.46 | 6.16 / 16.16 | 5.87 / 13.31 |
| misc_hot_mixed | 4.96 / 12.45 | 4.79 / 7 | 4.68 / 6.42 | 6.13 / 14.08 | 5.9 / 13.06 | 6.21 / 8.66 | 5.28 / 11.05 | 5.49 / 10.52 | 5.3 / 10.86 |
| misc_hot_repeat_voters | 5.04 / 14.73 | 4.87 / 13.35 | 4.79 / 13.55 | 5.77 / 11.97 | 5.46 / 13.5 | 5.86 / 11.21 | 5.36 / 12.93 | 5.75 / 13.92 | 5.42 / 10.94 |
| misc_private_bump | 1.22 / 2.6 | 1.23 / 1.74 | 1.21 / 1.73 | 1.53 / 1.81 | 1.53 / 1.95 | 1.54 / 1.94 | 1.58 / 3.61 | 1.67 / 3.49 | 1.59 / 3.49 |
| check_schema_health | 4.47 / 9.68 | 4.36 / 6.16 | 4.97 / 9.87 | 3.69 / 6.66 | 3.6 / 4.43 | 3.55 / 5.33 | 4.66 / 11.73 | 5.09 / 7.32 | 4.61 / 6.5 |
| guard_update_field_large | 1.14 / 3.17 | 1.18 / 1.95 | 1.19 / 1.9 | 1.62 / 5.06 | 1.55 / 1.75 | 1.65 / 2.26 | 1.56 / 1.72 | 1.67 / 2.07 | 1.57 / 2 |
| guard_update_field_small | 1.79 / 2.39 | 1.67 / 2.66 | 1.6 / 2.9 | 1.49 / 1.69 | 1.54 / 2.08 | 1.54 / 1.66 | 1.44 / 1.92 | 1.71 / 2.16 | 1.44 / 1.8 |
| guard_add_field_forced_large | 1.35 / 2.82 | 1.51 / 2.01 | 1.34 / 1.83 | 1.84 / 3.56 | 1.96 / 2.89 | 1.86 / 2.23 | 1.94 / 5.51 | 2.18 / 3.05 | 1.93 / 2.65 |
| guard_add_field_forced_small | 1.71 / 2.79 | 2.21 / 2.53 | 1.68 / 2.19 | 1.61 / 1.81 | 1.63 / 1.99 | 1.77 / 2.04 | 1.53 / 1.7 | 1.89 / 2.22 | 1.51 / 2 |
| field_archive_restore_cycle_large | 2.04 / 3.82 | 2.42 / 3.37 | 2.1 / 3.42 | 2.56 / 2.96 | 2.56 / 2.94 | 2.81 / 3.3 | 2.57 / 3.25 | 2.7 / 4.11 | 2.64 / 3.27 |
| field_archive_restore_cycle_small | 2.96 / 3.39 | 3.05 / 3.35 | 2.83 / 3.6 | 2.56 / 2.9 | 2.73 / 3.26 | 2.78 / 3.3 | 2.57 / 5.07 | 2.77 / 3.86 | 2.47 / 2.63 |
| openapi_read | 0.98 / 2.05 | 1.11 / 1.73 | 0.97 / 1.97 | 0.97 / 1.8 | 1 / 1.75 | 1.07 / 2.31 | 1.12 / 2.12 | 1.13 / 2.25 | 1.1 / 1.99 |
| auth_gate_probes | 1.79 / 2.85 | 1.82 / 2.71 | 1.79 / 2.68 | 1.79 / 2.7 | 1.78 / 2.73 | 1.82 / 2.76 | 1.82 / 2.85 | 1.91 / 2.94 | 1.75 / 2.66 |
| rate_limit_on | 0.24 / 0.52 | 0.21 / 0.36 | 0.23 / 1.05 | 0.23 / 0.48 | 0.22 / 0.47 | 0.22 / 0.46 | 0.25 / 0.55 | 0.22 / 0.44 | 0.26 / 0.67 |
| delete_entries | 0.35 / 0.45 | 0.35 / 0.41 | 0.37 / 0.45 | 0.38 / 0.44 | 0.36 / 0.45 | 0.39 / 0.43 | 0.38 / 0.45 | 0.38 / 0.46 | 0.4 / 0.5 |

## Run metadata

| Run | Runtime | vCPUs | Peak RSS (MB) | Wall (s) |
| --- | --- | ---: | ---: | ---: |
| bun-1cpu | bun 1.4.2 | 1 | 166 | 8 |
| bun-2cpu | bun 1.4.2 | 2 | 159 | 8 |
| bun-4cpu | bun 1.4.2 | 4 | 157 | 8 |
| deno-1cpu | deno 2.9.6 | 1 | 158 | 8 |
| deno-2cpu | deno 2.9.6 | 2 | 153 | 8 |
| deno-4cpu | deno 2.9.6 | 4 | 155 | 8 |
| node-1cpu | v24.13.1 | 1 | 148 | 8 |
| node-2cpu | v24.13.1 | 2 | 153 | 8 |
| node-4cpu | v24.13.1 | 4 | 151 | 8 |
