bench/results/v0.23.0/summary.md
# Boring CMS benchmark v0.23.0

Run: 2026-09-22T12:22:37.253Z on Linux 7.1.10-200.fc44.x86_64, AMD Ryzen 5 5600X 6-Core Processor (12 cores host).
Constraints and methodology: see bench/README.md. Read it before comparing numbers; the CPU pinning, memory caps, rate limit override, and client placement all shape these results.

## Throughput (ops/s) by phase

| Phase | bun-1cpu | bun-2cpu | bun-4cpu | deno-1cpu | deno-2cpu | deno-4cpu | node-1cpu | node-2cpu | node-4cpu |
| --- | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: |
| schema_apply | 846.2 | 870.5 | 860.8 | 689.2 | 733 | 742.5 | 613.4 | 713.6 | 771.5 |
| schema_read | 1964.6 | 2451 | 2385.4 | 2450.5 | 2391.4 | 2428 | 2229.8 | 2236.8 | 2295.5 |
| create_short | 1376.9 | 1541.8 | 1484.1 | 1374.2 | 1367.1 | 1365.5 | 1358.1 | 1339.2 | 1359.9 |
| create_long | 861.5 | 929.7 | 949.5 | 885.6 | 919.5 | 914.9 | 888.8 | 716.7 | 836.9 |
| create_short_restcall | 1758.4 | 1947.4 | 1998.9 | 1921.6 | 1855 | 1850.1 | 1919.6 | 1594.6 | 1813.8 |
| batch_create_short_x200 | 72.8 | 128.1 | 132.6 | 102 | 101.8 | 99.6 | 107.9 | 101.5 | 109.5 |
| read_list_short | 2572.1 | 3407.4 | 3535 | 3419.2 | 3240.2 | 3605.1 | 3765.8 | 3218.1 | 3948 |
| read_list_clamped | 4149.2 | 4987.7 | 5079.9 | 4899.1 | 4566.6 | 4493.5 | 4478.5 | 4438.2 | 4809.5 |
| read_updated_since_bare | 3068.4 | 3530.6 | 3854.8 | 3905.8 | 3731 | 3542.2 | 3567.2 | 3494.6 | 3706.5 |
| read_list_long | 2798.6 | 3219.7 | 3169.3 | 2980.3 | 2721 | 2935.3 | 2594.7 | 2488.7 | 2528.1 |
| read_single_short | 3293.6 | 5037.7 | 5146.2 | 4531.8 | 4779 | 4736.8 | 4820.4 | 4134.6 | 4812 |
| read_single_long | 2701.4 | 2809.4 | 2867.5 | 2421.1 | 2625.3 | 2560.2 | 2379.7 | 1873 | 2518.8 |
| read_304_etag | 5970.2 | 5496.3 | 6416.3 | 5371.1 | 5876.1 | 5235.8 | 4705 | 5216.7 | 5593.6 |
| update_then_read | 986.5 | 1072 | 1060.5 | 899.9 | 923.2 | 873 | 939 | 886.5 | 963.6 |
| etag_republish_preserve | 799.6 | 758.1 | 770.7 | 654 | 667 | 636.7 | 687.6 | 665.1 | 654 |
| rewrite_dry_1pair | 119.4 | 145.5 | 156.5 | 199 | 180.6 | 175 | 178.6 | 209.5 | 185.6 |
| rewrite_dry_200pairs | 136.2 | 135.1 | 133.1 | 132.2 | 83.8 | 133.5 | 136.6 | 134 | 110.8 |
| rewrite_live_200pairs | 66.2 | 68.2 | 75.1 | 81.8 | 70.5 | 68 | 93.6 | 89 | 82.5 |
| media_upload_64kb | 1351.9 | 910.3 | 1291.9 | 776.5 | 792.1 | 783.2 | 1243.7 | 950 | 1276.4 |
| media_serve_64kb | 1685.5 | 1628.8 | 1869.3 | 1351.4 | 1546.4 | 1643.6 | 1358.7 | 1621.1 | 1652.2 |
| media_reupload | 944.1 | 1261.9 | 1341.5 | 940.9 | 1030.1 | 1115.2 | 1178.7 | 921.9 | 954.6 |
| media_delete | 2500.6 | 2517.2 | 2482.3 | 2249.6 | 2300.4 | 2232.6 | 1730 | 2464.9 | 2088.2 |
| link_access | 4579.5 | 5153 | 4882.5 | 4373 | 4234.3 | 4071.4 | 4504 | 4380.9 | 4186.5 |
| read_concurrent_20 | 7712.1 | 7608.4 | 7224.4 | 7178.7 | 6105.7 | 7924.2 | 7331.2 | 7007.4 | 7710.1 |
| write_concurrent_10 | 2668.8 | 3661.4 | 2635.8 | 2914.9 | 3386.6 | 3521.9 | 2681.2 | 3349.4 | 2724.1 |
| schedule_future | 1002.8 | 1109.8 | 1283.2 | 1073.4 | 1004.8 | 1006.1 | 1070.4 | 1020.8 | 1080.4 |
| read_list_short_with_scheduled | 2643.4 | 2583.6 | 2681.9 | 2434.6 | 2330 | 2328 | 2449.9 | 2439 | 2566.4 |
| read_single_scheduled_404 | 3796.8 | 5249.1 | 5653.9 | 4748.5 | 4752.2 | 4140.8 | 5216.6 | 4704.5 | 5220.8 |
| list_scheduled | 1467.6 | 1505.6 | 1748.1 | 1548.6 | 1425.2 | 1400.8 | 1636.7 | 1431.6 | 1479.6 |
| get_entry_draft_scheduled | 3131.6 | 2900.1 | 3051.2 | 2690.8 | 2471.1 | 2290.2 | 2739.7 | 2480.2 | 2624.3 |
| reschedule_entry | 2255.1 | 2020.9 | 2406.7 | 2015.6 | 1927.1 | 1983.6 | 2279.3 | 1926.8 | 1734.6 |
| scheduled_goes_live | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
| misc_seed | 1376.5 | 1596.5 | 1423.1 | 1387.9 | 1449.9 | 1347.2 | 1442.3 | 1313.5 | 1258.4 |
| misc_read_only | 6226.6 | 6593.7 | 6289.4 | 6055.4 | 5963.6 | 6550.7 | 6175.3 | 6594.5 | 6659 |
| misc_read_write | 5887.5 | 6563.3 | 6432.7 | 5050.4 | 5133.7 | 5440.1 | 4911.7 | 5373.7 | 5394.6 |
| misc_write_votes | 9943.7 | 9866 | 9350.3 | 8610.6 | 9746 | 10181.4 | 9344.6 | 9905.7 | 9515.7 |
| misc_write_edits | 2496 | 2498.8 | 2428.7 | 2513.8 | 2470.5 | 2481.1 | 2100.3 | 2470.1 | 2288.4 |
| misc_hot_votes | 9269.9 | 10704.8 | 10489.9 | 10511.8 | 10735 | 10104.6 | 9278.8 | 10308.4 | 10298 |
| misc_hot_mixed | 11800.7 | 10606.5 | 11757.6 | 9833.7 | 10481.5 | 11377 | 11893.4 | 11803.8 | 11635.6 |
| misc_hot_repeat_voters | 9209 | 9655.1 | 11113.9 | 10263.1 | 11367.8 | 11805 | 11358.3 | 11692 | 11070.7 |
| misc_private_bump | 9999 | 10792.6 | 12313.9 | 11070.3 | 11443 | 11457.6 | 9218.3 | 9837.3 | 10746.1 |
| check_schema_health | 177.7 | 216.2 | 211 | 207.6 | 230.1 | 268.5 | 182.3 | 173.2 | 228.5 |
| guard_update_field_large | 674.6 | 807.4 | 799.9 | 620.9 | 602.4 | 590.8 | 623.9 | 591.9 | 564.3 |
| guard_update_field_small | 470 | 500.9 | 492 | 639.2 | 613.9 | 620.4 | 668.9 | 614.3 | 628.7 |
| guard_add_field_forced_large | 566.4 | 642.2 | 648.1 | 340.5 | 410.4 | 525.1 | 370 | 403.8 | 499.8 |
| guard_add_field_forced_small | 493.7 | 419.2 | 508.4 | 586 | 557.5 | 601.2 | 642.8 | 523 | 563.8 |
| field_archive_restore_cycle_large | 315.8 | 435.3 | 426.5 | 356.6 | 369.4 | 372.4 | 368.7 | 331.6 | 342.3 |
| field_archive_restore_cycle_small | 292.1 | 302.2 | 296.6 | 378.7 | 360.6 | 359.4 | 400.9 | 341.7 | 309.5 |
| openapi_read | 7360.4 | 5563.9 | 5543.9 | 6010.2 | 6250.2 | 6780.8 | 6670.6 | 5817.1 | 6615.9 |
| auth_gate_probes | 3453.7 | 3249 | 3476 | 3729.4 | 3119.7 | 3387.9 | 3487.6 | 3550.9 | 3560.9 |
| rate_limit_on | 3898.3 | 3522.2 | 3952 | 2180.6 | 3474.7 | 2353.4 | 3535.2 | 3294.5 | 3390.3 |
| delete_entries | 2419.5 | 2514.7 | 2509.5 | 2433.6 | 2433 | 2373.9 | 2530.9 | 2391.4 | 2587.1 |
| login_rate_limit | 45.1 | 48.1 | 46.5 | 26.2 | 25.9 | 25.7 | 34.3 | 31.6 | 33.2 |

## Latency p50 / p95 (ms) by phase

| Phase | bun-1cpu | bun-2cpu | bun-4cpu | deno-1cpu | deno-2cpu | deno-4cpu | node-1cpu | node-2cpu | node-4cpu |
| --- | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: |
| schema_apply | 0.96 / 2.64 | 0.91 / 2.67 | 1.02 / 2.45 | 1.35 / 2.62 | 1.25 / 2.58 | 1.16 / 2.77 | 1.47 / 2.81 | 1.41 / 2.58 | 1.27 / 2.34 |
| schema_read | 0.4 / 1.08 | 0.37 / 0.77 | 0.37 / 0.84 | 0.34 / 0.87 | 0.38 / 0.82 | 0.36 / 0.83 | 0.39 / 0.9 | 0.4 / 0.82 | 0.39 / 0.9 |
| create_short | 0.62 / 1.39 | 0.61 / 0.83 | 0.6 / 0.97 | 0.68 / 1.02 | 0.69 / 0.99 | 0.69 / 0.97 | 0.65 / 1.04 | 0.69 / 1.05 | 0.69 / 0.96 |
| create_long | 1.06 / 1.82 | 1 / 1.7 | 0.98 / 1.69 | 1.04 / 1.63 | 1.04 / 1.53 | 1.03 / 1.36 | 1.04 / 1.77 | 1.32 / 2.09 | 1.12 / 1.6 |
| create_short_restcall | 0.52 / 0.83 | 0.49 / 0.66 | 0.48 / 0.58 | 0.47 / 0.75 | 0.52 / 0.63 | 0.5 / 0.7 | 0.46 / 0.8 | 0.6 / 0.83 | 0.51 / 0.72 |
| batch_create_short_x200 | 12.34 / 17.16 | 7.8 / 8.11 | 7.18 / 8.7 | 10.18 / 10.34 | 10.31 / 10.38 | 9.94 / 10.6 | 8.73 / 10.7 | 10.21 / 10.84 | 8.12 / 11.38 |
| read_list_short | 0.31 / 0.85 | 0.26 / 0.43 | 0.25 / 0.35 | 0.24 / 0.4 | 0.28 / 0.41 | 0.27 / 0.31 | 0.24 / 0.33 | 0.26 / 0.47 | 0.23 / 0.3 |
| read_list_clamped | 0.18 / 0.29 | 0.17 / 0.25 | 0.18 / 0.21 | 0.18 / 0.22 | 0.2 / 0.23 | 0.2 / 0.24 | 0.18 / 0.24 | 0.19 / 0.23 | 0.18 / 0.25 |
| read_updated_since_bare | 0.24 / 0.76 | 0.25 / 0.3 | 0.23 / 0.28 | 0.24 / 0.32 | 0.25 / 0.35 | 0.27 / 0.33 | 0.24 / 0.45 | 0.28 / 0.34 | 0.25 / 0.33 |
| read_list_long | 0.24 / 0.71 | 0.2 / 0.6 | 0.2 / 0.59 | 0.25 / 0.61 | 0.27 / 0.45 | 0.23 / 0.6 | 0.27 / 0.61 | 0.3 / 0.6 | 0.28 / 0.53 |
| read_single_short | 0.22 / 0.79 | 0.2 / 0.22 | 0.19 / 0.23 | 0.2 / 0.25 | 0.2 / 0.25 | 0.2 / 0.26 | 0.2 / 0.24 | 0.23 / 0.29 | 0.2 / 0.25 |
| read_single_long | 0.32 / 0.45 | 0.32 / 0.4 | 0.33 / 0.36 | 0.33 / 0.45 | 0.32 / 0.48 | 0.35 / 0.47 | 0.38 / 0.49 | 0.48 / 0.58 | 0.4 / 0.51 |
| read_304_etag | 0.15 / 0.2 | 0.18 / 0.21 | 0.15 / 0.18 | 0.17 / 0.22 | 0.16 / 0.19 | 0.18 / 0.22 | 0.16 / 0.29 | 0.18 / 0.27 | 0.17 / 0.23 |
| update_then_read | 0.86 / 1.73 | 0.86 / 1.04 | 0.87 / 1.19 | 1.01 / 1.4 | 1.02 / 1.29 | 1.1 / 1.3 | 0.93 / 1.6 | 1.03 / 1.32 | 0.95 / 1.31 |
| etag_republish_preserve | 1.15 / 1.88 | 1.29 / 1.36 | 1.26 / 1.38 | 1.48 / 1.83 | 1.44 / 1.73 | 1.55 / 1.67 | 1.39 / 1.85 | 1.47 / 1.81 | 1.5 / 1.81 |
| rewrite_dry_1pair | 8.38 / 8.38 | 6.87 / 6.87 | 6.39 / 6.39 | 5.02 / 5.02 | 5.54 / 5.54 | 5.71 / 5.71 | 5.6 / 5.6 | 4.77 / 4.77 | 5.39 / 5.39 |
| rewrite_dry_200pairs | 7.34 / 7.34 | 7.4 / 7.4 | 7.51 / 7.51 | 7.56 / 7.56 | 11.93 / 11.93 | 7.49 / 7.49 | 7.32 / 7.32 | 7.46 / 7.46 | 9.03 / 9.03 |
| rewrite_live_200pairs | 15.1 / 15.1 | 14.67 / 14.67 | 13.31 / 13.31 | 12.23 / 12.23 | 14.18 / 14.18 | 14.7 / 14.7 | 10.68 / 10.68 | 11.23 / 11.23 | 12.13 / 12.13 |
| media_upload_64kb | 0.68 / 0.96 | 0.73 / 3.25 | 0.71 / 0.95 | 0.89 / 1.68 | 0.9 / 2.38 | 0.9 / 2.63 | 0.74 / 1.01 | 0.74 / 1.8 | 0.73 / 0.89 |
| media_serve_64kb | 0.54 / 1.09 | 0.52 / 1.1 | 0.49 / 0.76 | 0.56 / 0.93 | 0.58 / 0.8 | 0.55 / 0.8 | 0.51 / 0.87 | 0.52 / 0.83 | 0.51 / 0.76 |
| media_reupload | 0.91 / 1.67 | 0.73 / 1.17 | 0.73 / 0.94 | 0.89 / 1.85 | 0.89 / 1.33 | 0.87 / 0.94 | 0.74 / 1.09 | 0.71 / 1.81 | 0.9 / 2.01 |
| media_delete | 0.32 / 0.96 | 0.36 / 0.46 | 0.37 / 0.58 | 0.39 / 0.62 | 0.42 / 0.49 | 0.43 / 0.53 | 0.37 / 0.59 | 0.36 / 0.5 | 0.38 / 0.57 |
| link_access | 0.19 / 0.41 | 0.18 / 0.22 | 0.2 / 0.24 | 0.22 / 0.29 | 0.23 / 0.31 | 0.24 / 0.27 | 0.21 / 0.32 | 0.23 / 0.24 | 0.23 / 0.28 |
| read_concurrent_20 | 2.16 / 4.54 | 2.29 / 4.82 | 2.48 / 5.1 | 2.44 / 4.44 | 2.52 / 6.91 | 2.23 / 4.28 | 2.25 / 5.96 | 2.37 / 5.31 | 2.22 / 4.9 |
| write_concurrent_10 | 2.78 / 10.79 | 2.65 / 4.07 | 2.55 / 8.42 | 2.34 / 8.2 | 2.81 / 4.15 | 2.63 / 5.11 | 2.62 / 8.8 | 2.83 / 4.62 | 2.41 / 9.21 |
| schedule_future | 0.88 / 1.87 | 0.86 / 1.19 | 0.77 / 0.89 | 0.86 / 1.06 | 0.98 / 1.22 | 0.96 / 1.21 | 0.87 / 1.03 | 0.93 / 1.22 | 0.91 / 1.19 |
| read_list_short_with_scheduled | 0.36 / 0.53 | 0.34 / 0.44 | 0.35 / 0.46 | 0.37 / 0.66 | 0.38 / 0.46 | 0.37 / 0.54 | 0.36 / 0.59 | 0.36 / 0.49 | 0.37 / 0.48 |
| read_single_scheduled_404 | 0.22 / 0.31 | 0.18 / 0.22 | 0.17 / 0.2 | 0.19 / 0.26 | 0.2 / 0.25 | 0.23 / 0.32 | 0.18 / 0.24 | 0.2 / 0.27 | 0.18 / 0.22 |
| list_scheduled | 0.58 / 1.08 | 0.62 / 0.85 | 0.54 / 0.67 | 0.61 / 0.7 | 0.68 / 0.77 | 0.7 / 0.82 | 0.6 / 0.67 | 0.68 / 0.76 | 0.66 / 0.76 |
| get_entry_draft_scheduled | 0.3 / 0.4 | 0.33 / 0.39 | 0.32 / 0.36 | 0.37 / 0.43 | 0.4 / 0.45 | 0.42 / 0.52 | 0.34 / 0.49 | 0.4 / 0.43 | 0.37 / 0.44 |
| reschedule_entry | 0.39 / 0.74 | 0.41 / 0.57 | 0.41 / 0.48 | 0.48 / 0.57 | 0.43 / 0.51 | 0.43 / 0.59 | 0.43 / 0.55 | 0.44 / 0.56 | 0.52 / 0.79 |
| scheduled_goes_live | 3108.86 / 3108.86 | 3104.84 / 3104.84 | 3105.5 / 3105.5 | 3105.94 / 3105.94 | 3105.14 / 3105.14 | 3104.93 / 3104.93 | 3105.21 / 3105.21 | 3105.16 / 3105.16 | 3106.04 / 3106.04 |
| misc_seed | 0.68 / 0.87 | 0.61 / 0.8 | 0.66 / 0.98 | 0.67 / 1 | 0.67 / 0.76 | 0.72 / 0.87 | 0.65 / 0.9 | 0.73 / 0.92 | 0.77 / 1 |
| misc_read_only | 2.3 / 4.15 | 2.21 / 4.3 | 2.33 / 3.86 | 2.29 / 4.5 | 2.31 / 4.41 | 2.09 / 4.45 | 2.29 / 4.45 | 2.15 / 4.16 | 2.18 / 4.05 |
| misc_read_write | 2.4 / 5.12 | 2.19 / 4.36 | 2.35 / 3.83 | 2.85 / 5.23 | 2.84 / 4.74 | 2.78 / 4.35 | 2.8 / 6.15 | 2.52 / 4.99 | 2.69 / 5.11 |
| misc_write_votes | 2.85 / 4.85 | 2.92 / 3.96 | 2.93 / 5.3 | 3.07 / 5.53 | 2.89 / 4.87 | 2.83 / 3.74 | 2.79 / 6.39 | 2.9 / 5.01 | 3.05 / 5.05 |
| misc_write_edits | 1.36 / 2.53 | 1.13 / 2.47 | 1.11 / 2.43 | 1.45 / 2.51 | 1.52 / 1.88 | 1.47 / 2.21 | 1.42 / 3.65 | 1.27 / 2.58 | 1.39 / 2.85 |
| misc_hot_votes | 5.81 / 15.31 | 5.4 / 9.15 | 5.54 / 9.97 | 5.19 / 12.22 | 5.24 / 12.03 | 5.27 / 12.39 | 5.34 / 15.86 | 5.56 / 12.93 | 5.46 / 11.56 |
| misc_hot_mixed | 4.91 / 9.15 | 5.35 / 11.12 | 4.82 / 9.05 | 5.47 / 15.73 | 4.99 / 14.72 | 4.9 / 8.34 | 4.77 / 10.09 | 4.8 / 9.05 | 4.7 / 9.08 |
| misc_hot_repeat_voters | 5.56 / 16.38 | 5.55 / 13.23 | 5.16 / 8.8 | 5.01 / 11.23 | 4.97 / 7.54 | 4.96 / 6.65 | 4.81 / 13.27 | 4.75 / 9.29 | 4.78 / 15.7 |
| misc_private_bump | 1.23 / 3.24 | 1.34 / 1.93 | 1.16 / 1.38 | 1.16 / 1.93 | 1.16 / 1.62 | 1.15 / 1.61 | 1.32 / 3.04 | 1.26 / 2.7 | 1.3 / 2.69 |
| check_schema_health | 4.83 / 7.98 | 4.21 / 6.08 | 4.46 / 6.22 | 3.49 / 9.78 | 3.9 / 6.76 | 3.42 / 4.43 | 4.44 / 8.94 | 4.64 / 9.75 | 4.22 / 5.15 |
| guard_update_field_large | 1.23 / 3.63 | 1.2 / 1.7 | 1.18 / 1.93 | 1.57 / 1.77 | 1.57 / 2.13 | 1.61 / 2.04 | 1.57 / 1.75 | 1.63 / 2.01 | 1.69 / 2.12 |
| guard_update_field_small | 1.82 / 2.96 | 1.68 / 2.71 | 1.88 / 2.83 | 1.54 / 1.72 | 1.57 / 1.86 | 1.52 / 1.89 | 1.45 / 1.88 | 1.57 / 2.1 | 1.55 / 1.85 |
| guard_add_field_forced_large | 1.44 / 3.23 | 1.43 / 1.9 | 1.41 / 2.22 | 1.94 / 5.13 | 2.02 / 4.32 | 1.83 / 2.03 | 1.81 / 5.39 | 1.97 / 3.28 | 1.88 / 2.59 |
| guard_add_field_forced_small | 1.88 / 2.8 | 2.35 / 3.76 | 1.87 / 2.53 | 1.67 / 1.96 | 1.71 / 2.18 | 1.59 / 1.93 | 1.53 / 1.76 | 1.81 / 2.07 | 1.69 / 2.03 |
| field_archive_restore_cycle_large | 2.29 / 7.04 | 2.23 / 2.67 | 2.21 / 2.64 | 2.61 / 3.54 | 2.62 / 3.01 | 2.55 / 3.1 | 2.59 / 3.4 | 2.99 / 3.62 | 2.84 / 3.48 |
| field_archive_restore_cycle_small | 3.19 / 4.39 | 3.44 / 3.84 | 3.52 / 3.94 | 2.56 / 2.9 | 2.69 / 3 | 2.63 / 3.33 | 2.48 / 2.63 | 2.96 / 3.5 | 2.7 / 4.28 |
| openapi_read | 0.97 / 1.83 | 1.25 / 2.78 | 1.13 / 2.58 | 1.1 / 2.26 | 0.95 / 2.32 | 0.89 / 2.34 | 1.05 / 1.8 | 1.13 / 3 | 1.05 / 2.09 |
| auth_gate_probes | 2 / 3.08 | 2.39 / 3.79 | 2 / 3.03 | 1.85 / 2.8 | 2.5 / 3.88 | 2.46 / 3.83 | 1.96 / 3.46 | 2.02 / 3.12 | 1.96 / 3.02 |
| rate_limit_on | 0.2 / 0.4 | 0.23 / 0.41 | 0.21 / 0.4 | 0.23 / 0.69 | 0.26 / 0.41 | 0.21 / 1.39 | 0.21 / 0.5 | 0.24 / 0.51 | 0.23 / 0.5 |
| delete_entries | 0.36 / 0.47 | 0.37 / 0.42 | 0.37 / 0.46 | 0.4 / 0.44 | 0.41 / 0.43 | 0.41 / 0.49 | 0.38 / 0.55 | 0.41 / 0.48 | 0.38 / 0.46 |
| login_rate_limit | 22.24 / 30.82 | 21.76 / 29.59 | 22.42 / 32.66 | 41.68 / 43.53 | 40.78 / 48.55 | 42.65 / 43.9 | 31.4 / 37.29 | 34.5 / 37.56 | 32.73 / 35.87 |

## Run metadata

| Run | Runtime | vCPUs | Peak RSS (MB) | Wall (s) |
| --- | --- | ---: | ---: | ---: |
| bun-1cpu | bun 1.4.2 | 1 | 156 | 8 |
| bun-2cpu | bun 1.4.2 | 2 | 160 | 8 |
| bun-4cpu | bun 1.4.2 | 4 | 164 | 8 |
| deno-1cpu | deno 2.9.6 | 1 | 164 | 9 |
| deno-2cpu | deno 2.9.6 | 2 | 165 | 8 |
| deno-4cpu | deno 2.9.6 | 4 | 161 | 8 |
| node-1cpu | v24.13.1 | 1 | 156 | 8 |
| node-2cpu | v24.13.1 | 2 | 155 | 8 |
| node-4cpu | v24.13.1 | 4 | 153 | 8 |
